[tool.poetry]
name = "dag2langgraph"
version = "0.1.1"
description = "Converts a Directed Acyclic Graph (DAG) JSON to LangGraph JSON format."
authors = ["Ron Vergis <ron@vergis.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dag2langgraph" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[tool.poetry.scripts]
dag2langgraph = "dag2langgraph.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

